# swiftcpp-example

./: CMakeLists.txt  README.md
.github/workflow/: build.yml
.github/workflows/: build.yml
Sources/: main.swift
Tests/: CMakeLists.txt  point_test.swift
cpp/: module.map  mypoint.cpp  mypoint.hpp
